<resources>
    <string name="app_name">Mosque Management System</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="full_name_hint">Full Name</string>
    <string name="login_button_text">Login</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="logo_description" />
    <string name="welcome_text">Mosque Management System</string>
    <string name="signup_text">Don\'t have an account? Sign Up</string>
    <string name="login_text">Already have an account? Login</string>
    <string name="donation_form">Donation Form</string>
    <string name="donor_name">Donor Name</string>
    <string name="donation_type">Donation Type</string>
    <string name="donation_month">Donation Month</string>
    <string name="amount">Amount</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="bkash">Bkash</string>
    <string name="nagad">Nagad</string>
    <string name="rocket">Rocket</string>
    <string name="by_hand">By Hand</string>
    <string name="continue_txt">Continue</string>

    <string-array name="donation_types_donate">
        <item>Regular</item>
        <item>Mosuhimu Collection</item>
        <item>Eid Collection</item>
        <item>Others</item>
    </string-array>
    <string-array name="donation_types_filter">
        <item>All</item>
        <item>Regular</item>
        <item>Mosuhimu Collection</item>
        <item>Eid Collection</item>
        <item>Others</item>
    </string-array>

    <string-array name="donation_amount_ranges">
        <item>All</item>
        <item>Less than 50</item>
        <item>50 to 100</item>
        <item>100 to 200</item>
        <item>300 to 500</item>
        <item>500 to 1000</item>
        <item>More than 1000</item>
    </string-array>

    <string-array name="donation_months">
        <item>All</item>
        <item>January 2025</item>
        <item>February 2025</item>
        <item>March 2025</item>
        <item>April 2025</item>
        <item>May 2025</item>
        <item>June 2025</item>
        <item>July 2025</item>
        <item>August 2025</item>
        <item>September 2025</item>
        <item>October 2025</item>
        <item>November 2025</item>
        <item>December 2025</item>
    </string-array>

</resources>